--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "0.4.5",
+    "grunt-cli": "^1.2.0",
     "grunt-parallel": "^0.4.1",
     "grunt-shell": "^1.1.2",
     "jasmine-node": "^1.14.5",
