WIP: use jasmine instead of jasmine-node

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-shell": "^1.1.2",
     "jasmine-node": "^1.14.5",
     "saucelabs": "^1.0.1",
-    "selenium-webdriver": "2.48.0"
+    "selenium-webdriver": "^4.0.0-alpha.5",
+    "jasmine": "^3.5.0"
   }
 }
