--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "0.4.5",
-    "grunt-cli": "^1.2.0",
-    "grunt-parallel": "^0.4.1",
+    "grunt-cli": "^1.3.2",
+    "grunt-concurrent": "^3.0.0",
     "grunt-shell": "^1.1.2",
+    "jasmine": "^3.5.0",
     "saucelabs": "^3.0.1",
-    "selenium-webdriver": "^4.0.0-alpha.5",
-    "jasmine": "^3.5.0"
+    "selenium-webdriver": "^4.0.0-alpha.5"
   }
 }
